--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.13",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typedi": "^0.8.0",
+    "typescript": "^3.1.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -39,9 +43,6 @@
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "nodemon": "^2.0.1",
-    "prettier": "^1.17.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "prettier": "^1.17.0"
   }
 }
